<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="search">Search</string>
    <string name="trailer">Trailer</string>
    <string name="communicate">Communicate</string>
    <string name="about_us">About Us</string>
    <string name="share">Share</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="top_games">Top Games</string>
    <string name="cooming_soon">Cooming Soon</string>
    <string name="articles">Articles</string>
    <string name="what_is_on_your_mind">What is on your mind?</string>
    <string name="publisher">Publisher</string>
    <string name="year_of_release">Year Of Release</string>
    <string name="platform">Platform</string>
    <string name="gener">Gener</string>
    <string name="articels">Articels</string>
    <string name="main_menu">Main Menu</string>
    <string name="see_all_articles">See All Articles</string>
    <string name="see_all_trailers">See All Trailers</string>
    <string name="see_all">See All</string>
    <string name="see_all_top_game">See All Top Game</string>
    <string name="see_all_cooming_soon">See All Cooming Soon</string>
    <string name="see_all_trailer">See All Trailer</string>
    <string name="home_search"><![CDATA[Home/> <!-- Search -->]]></string>
    <string name="home">Home</string>
    <string name="app">Game\nMobile</string>


    <string-array name="Year_Of_Release">
        <item>
        <string name="null" tools:ignore="DuplicateDefinition" />
        </item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>

    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="games">Games</string>
    <string name="see_all_games">See All Games</string>
    <string name="copyright_rawg_api">Copyright: RAWG API</string>
    <string name="year_of_release_from">Year of release from</string>
    <string name="year_of_release_to">Year_of_release to</string>
    <string name="copyright_www_rawg_io">Copyright: www.rawg.io</string>
    <string name="developrs">Developrs</string>
    <string name="stores">Stores</string>
    <string name="title_activity_show_maps">Map</string>
    <string name="api_key_google">-oBPo</string>
    <string name="app_curent_name">Current Place</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Defualt Location</string>
    <string name="default_info_snippet">No Places Found, Because Location Permission Is Desabled</string>
    <string name="coming_soon">Coming Soon</string>

</resources>