<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginVertical="10dp"
        android:background="@color/white"/>

       <View
           android:layout_width="match_parent"
           android:layout_height="4dp"
           android:layout_marginVertical="10dp"
           android:background="@color/white"/>

    <!-- ALl Games-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/click_see_all_game"
            android:layout_gravity="right"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:text="@string/see_all"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="Games"
            android:textSize="25sp"
            android:textColor="@color/white"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view_all_games"
            android:layout_marginTop="55dp"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/background_recycleview"/>



    </FrameLayout>
    <!-- End All Games -->

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginVertical="10dp"
        android:background="@color/white"/>

    <!-- Top Game-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/click_see_top_game"
            android:layout_gravity="right"
            android:text="@string/see_all"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/top_games"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view_top_game"
            android:layout_marginTop="55dp"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/background_recycleview"/>

    </FrameLayout> <!-- End Top Games -->


    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginVertical="10dp"
        android:background="@color/white"/>

    <!-- Coming Game-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/click_see_cooming_soon_game"
            android:text="@string/see_all"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/coming_soon"
            android:textSize="25sp"
            android:textColor="@color/white"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_cooming_soon_game"
            android:layout_marginTop="55dp"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/background_recycleview"/>

    </FrameLayout> <!-- End Cooming Games -->

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginVertical="10dp"
        android:background="@color/white"/>

<!--       &lt;!&ndash; Stores &ndash;&gt;-->
<!--       <FrameLayout-->
<!--           android:layout_width="match_parent"-->
<!--           android:layout_height="match_parent"-->
<!--           android:layout_weight="1"-->
<!--           android:layout_margin="10dp">-->

<!--           <Button-->
<!--               android:layout_width="wrap_content"-->
<!--               android:layout_height="wrap_content"-->
<!--               android:layout_gravity="right"-->
<!--               android:id="@+id/click_see_google_maps"-->
<!--               android:text="@string/see_all"-->
<!--               android:background="@drawable/button_background"-->
<!--               android:textColor="@color/white"-->
<!--               android:textSize="15sp"/>-->

<!--           <TextView-->
<!--               android:layout_width="wrap_content"-->
<!--               android:layout_height="wrap_content"-->
<!--               android:layout_marginRight="5dp"-->
<!--               android:text="Stroes"-->
<!--               android:textSize="25sp"-->
<!--               android:textColor="@color/white"/>-->

<!--           <fragment-->
<!--               android:id="@+id/map"-->
<!--               android:name="com.google.android.gms.maps.SupportMapFragment"-->
<!--               android:layout_width="match_parent"-->
<!--               android:layout_height="150dp"-->
<!--               android:layout_marginTop="55dp"-->
<!--               tools:context=".MapsActivity" />-->


<!--       </FrameLayout> &lt;!&ndash; End Stores &ndash;&gt;-->

       <View
           android:layout_width="match_parent"
           android:layout_height="4dp"
           android:layout_marginVertical="10dp"
           android:background="@color/white"/>

   </LinearLayout>

</ScrollView>